--- a/equipment/templates/equipment/equipment_stock_form.html
+++ b/equipment/templates/equipment/equipment_stock_form.html
@@ -33,6 +33,10 @@
                                 class="form-control calendar__start hasDatepicker" autocomplete="off"
                                 data-provide="datepicker" placeholder="&#xf073;">
                         </div>
+                        <div class="form-group ">
+                            <label>원 가</label>
+                            <input type="text" class="form-control" id="cost" autocomplete="off" name="cost">
+                        </div>
                         <div class="form-group">
                             <label>기 타</label>
                             <textarea class="form-control col-sm-12" rows="5" id="comments" name="comments"></textarea>
