[ADD] dashboard and eidt page

--- a/report/templates/report/report_project.html
+++ b/report/templates/report/report_project.html
@@ -25,7 +25,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                <a href="{% url 'report_project_detail' %}">
+                                <a href="{% url 'report_project_edit' %}">
                                     LG화학
                                 </a>
                             </td>
