[MODIFY] detail to edit url

--- a/report/templates/report/report_support.html
+++ b/report/templates/report/report_support.html
@@ -28,7 +28,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                <a href="{% url 'report_support_detail' %}">
+                                <a href="{% url 'report_support_edit' %}">
                                     이마트 NAC 5.0 제품 설명
                                 </a>
                             </td>
@@ -42,7 +42,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <a href="{% url 'report_support_detail' %}">
+                                <a href="{% url 'report_support_edit' %}">
                                     LG 화학 NAC 5.0 POC
                                 </a>
                             </td>
