[MODFIY] detail to edit page and urls

--- a/report/templates/report/report_edu.html
+++ b/report/templates/report/report_edu.html
@@ -27,7 +27,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                <a href="{% url 'report_edu_detail' %}">
+                                <a href="{% url 'report_edu_edit' %}">
                                     NAC 관리자 교육(2020년 07월 03일 ~ 2020년 07월 04일)
                                 </a>
                             </td>
@@ -40,7 +40,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <a href="{% url 'report_edu_detail' %}">
+                                <a href="{% url 'report_edu_edit' %}">
                                     GPI 5.0 관리자 교육(2020년 07월 05일 ~ 2020년 07월 06일)
                                 </a>
                             </td>
