--- a/report/templates/report/report_etc.html
+++ b/report/templates/report/report_etc.html
@@ -27,7 +27,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                <a href="{% url 'report_etc_detail' %}">
+                                <a href="{% url 'report_etc_edit' %}">
                                     사무실 서버룸 정리 작업
                                 </a>
                             </td>
