--- a/report/templates/report/report_maintenance_client_edit.html
+++ b/report/templates/report/report_maintenance_client_edit.html
@@ -4,7 +4,7 @@
     <div class="card">
         <div class="card-header">
             <i class="fa fa-briefcase"></i>
-            <h5 class="card-title">&nbsp;LG화학 NAC 5.0 POC</h5>
+            <h5 class="card-title">&nbsp;LG화학 20년 9월 유지보수 상세내역</h5>
         </div>
         <div class="card-body">
             <div class="form-group col-12">
@@ -26,37 +26,62 @@
                 </div>
                 <div class="form-group">
                     <span>완료일</span>
-                    <input type="text" class="form-control" autocomplete="off" value="2020-08-31" disabled>
+                    <input type="text" class="form-control" autocomplete="off" value="" disabled>
+                </div>
+                <div class="form-group">
+                    <span>소요시간</span>
+                    <input type="text" class="form-control" autocomplete="off" value="1시간" disabled>
                 </div>
                 <div class="form-group">
                     <span>지원 내용</span>
+                    <input type="text" class="form-control" autocomplete="off" value="정기점검" disabled>
+                </div>
+                <div class="form-group">
+                    <span>지원 형태</span>
+                    <input type="text" class="form-control" autocomplete="off" value="방문" disabled>
+                </div>
+                <div class="form-group">
+                    <span>관련 장비</span>
                     <button type="button" class="btn btn-outline-primary">추가</button>
-                    <textarea class="form-control col-sm-12" rows="5" disabled>
-- 2020. 08. 24 준비
-- 2020. 07. 25 사전 미팅
-                    </textarea>
+                    <ul class="list-group">
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            C10
+                            <span class="badge badge-primary badge-pill">14</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            S10
+                            <span class="badge badge-primary badge-pill">2</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            S20
+                            <span class="badge badge-primary badge-pill">1</span>
+                        </li>
+                    </ul>
                 </div>
                 <div class="form-group">
                     <span>내용 및 특이사항</span>
-                    <button type="button" class="btn btn-outline-primary">변경</button>
-                    <textarea class="form-control col-sm-12" rows="5" disabled>
-- 장소: LG화학 본사 1층
-- NAC 5.0 제품 설명 완료
+                    <button type="button" class="btn btn-outline-primary" id="comments-change-btn">변경</button>
+                    <textarea class="form-control col-sm-12" id="comments" rows="5" disabled>
+- 2020년 9월 정기점검 진행
                     </textarea>
                 </div>
                 <div class="form-group">
                     <span>첨부 파일</span>
-                    <button type="button" class="btn btn-outline-primary">업로드</button>
+                    <button type="button" class="btn btn-outline-primary">추가</button>
                     <ul class="list-group">
                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                            [LG화학/POC] 제품소개서.ppt
-                            <span class="badge badge-primary badge-pill">다운로드</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            [LG화학/POC] 네트워크 환경 및 구성도.ppt
+                            [LG화학] 20년 9월 정기점검.ppt
                             <span class="badge badge-primary badge-pill">다운로드</span>
                         </li>
                     </ul>
+                </div>
+                <div class="text-right submit-box">
+                    <button type="button" class="btn btn-outline-danger">
+                        취소
+                    </button>
+                    <button type="submit" class="btn btn-outline-primary" id="submit-btn">
+                        수정
+                    </button>
                 </div>
             </div>
         </div>
@@ -73,5 +98,6 @@
 <script src="{% static 'js/selectpicker/bootstrap-select.js' %}"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+<script src="{% static 'js/project/projectEdit.js' %}"></script>
 <script src="{% static 'js/datatable/dataTable.js' %}"></script>
 {% endblock %}
