--- a/report/templates/report/report_etc_edit.html
+++ b/report/templates/report/report_etc_edit.html
@@ -27,10 +27,18 @@
 
                 <div class="form-group">
                     <span>내용</span>
-                    <button type="button" class="btn btn-outline-primary">변경</button>
-                    <textarea class="form-control col-sm-12" rows="5" disabled>
+                    <button type="button" class="btn btn-outline-primary" id="comments-change-btn">변경</button>
+                    <textarea class="form-control col-sm-12" id="comments" rows="5" disabled>
 - 사무실 서버룸 정리 작업
                     </textarea>
+                </div>
+                <div class="text-right submit-box">
+                    <button type="button" class="btn btn-outline-danger">
+                        취소
+                    </button>
+                    <button type="submit" class="btn btn-outline-primary" id="submit-btn">
+                        수정
+                    </button>
                 </div>
             </div>
         </div>
@@ -47,5 +55,6 @@
 <script src="{% static 'js/selectpicker/bootstrap-select.js' %}"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+<script src="{% static 'js/project/projectEdit.js' %}"></script>
 <script src="{% static 'js/datatable/dataTable.js' %}"></script>
 {% endblock %}
