--- a/report/templates/report/report_etc_edit.html
+++ b/report/templates/report/report_etc_edit.html
@@ -7,39 +7,42 @@
             <h5 class="card-title">&nbsp;사무실 서버룸 정리 작업</h5>
         </div>
         <div class="card-body">
-            <div class="form-group col-12">
-                <div class="form-group">
-                    <span>고객사</span>
-                    <input type="text" class="form-control" autocomplete="off" value="없음" disabled>
+            <div class="form-group col-12 contents">
+                <div class="left-div">
+                    <div class="form-group">
+                        <span>고객사</span>
+                        <input type="text" class="form-control" id="client" autocomplete="off" value="없음" disabled>
+                    </div>
+                    <div class="form-group">
+                        <span>담당자</span>
+                        <input type="text" class="form-control" id="manager" autocomplete="off" value="정세욱" disabled>
+                    </div>
+                    <div class="form-group">
+                        <span>관련제품</span>
+                        <input type="text" class="form-control" id="product" autocomplete="off" value="없음" disabled>
+                    </div>
+                    <div class="form-group">
+                        <span>소요시간</span>
+                        <input type="text" class="form-control" id="spent-time" autocomplete="off" value="8시간" disabled>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <span>담당자</span>
-                    <input type="text" class="form-control" autocomplete="off" value="정세욱" disabled>
-                </div>
-                <div class="form-group">
-                    <span>관련 제품</span>
-                    <input type="text" class="form-control" autocomplete="off" value="없음" disabled>
-                </div>
-                <div class="form-group">
-                    <span>소요 시간</span>
-                    <input type="text" class="form-control" autocomplete="off" value="8시간" disabled>
-                </div>
-
-                <div class="form-group">
-                    <span>내용</span>
-                    <button type="button" class="btn btn-outline-primary" id="comments-change-btn">변경</button>
-                    <textarea class="form-control col-sm-12" id="comments" rows="5" disabled>
+                <div class="right-div">
+                    <div class="form-group">
+                        <span>내용 및 특이사항</span>
+                        <span class="badge badge-primary" id="comments-change-btn">변경</span>
+                        <textarea class="form-control col-sm-12" id="comments" rows="5" disabled>
 - 사무실 서버룸 정리 작업
-                    </textarea>
+                        </textarea>
+                    </div>
                 </div>
-                <div class="text-right submit-box">
-                    <button type="button" class="btn btn-outline-danger">
-                        취소
-                    </button>
-                    <button type="submit" class="btn btn-outline-primary" id="submit-btn">
-                        수정
-                    </button>
-                </div>
+            </div>
+            <div class="text-right submit-box">
+                <button type="button" class="btn btn-outline-danger">
+                    취소
+                </button>
+                <button type="submit" class="btn btn-outline-primary" id="submit-btn">
+                    수정
+                </button>
             </div>
         </div>
     </div>
@@ -49,6 +52,7 @@
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
+<link rel="stylesheet" href="{% static 'css/report/reportProjectEdit.css' %}">
 {% endblock %}
 
 {% block js %}
