--- a/report/templates/report/report_support_edit.html
+++ b/report/templates/report/report_support_edit.html
@@ -7,65 +7,76 @@
             <h5 class="card-title">&nbsp;LG화학 NAC 5.0 POC</h5>
         </div>
         <div class="card-body">
-            <div class="form-group col-12">
-                <div class="form-group">
-                    <span>진행 상태</span>
-                    <input type="text" class="form-control" autocomplete="off" value="완료" disabled>
+            <div class="form-group col-12 contents">
+                <div class="left-div">
+                    <div class="form-group">
+                        <span>진행 상태</span>
+                        <input type="text" class="form-control" id="status" autocomplete="off" value="진행중" disabled>
+                    </div>
+                    <div class="form-group">
+                        <span>담당자</span>
+                        <input type="text" class="form-control" id="manager" autocomplete="off" value="임덕명, 이민혁"
+                            disabled>
+                    </div>
+                    <div class="form-group">
+                        <span>관련제품</span>
+                        <input type="text" class="form-control" id="product" autocomplete="off" value="Genians NAC"
+                            disabled>
+                    </div>
+                    <div class="form-group">
+                        <span>시작일</span>
+                        <input type="text" class="form-control" id="start-date" autocomplete="off" value="2020-08-07"
+                            disabled>
+                    </div>
+                    <div class="form-group">
+                        <span>완료일</span>
+                        <input type="text" class="form-control" id="end-date" autocomplete="off" value="" disabled>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <span>담당자</span>
-                    <input type="text" class="form-control" autocomplete="off" value="임덕명, 이민혁" disabled>
-                </div>
-                <div class="form-group">
-                    <span>관련제품</span>
-                    <input type="text" class="form-control" autocomplete="off" value="Genians NAC" disabled>
-                </div>
-                <div class="form-group">
-                    <span>시작일</span>
-                    <input type="text" class="form-control" autocomplete="off" value="2020-08-07" disabled>
-                </div>
-                <div class="form-group">
-                    <span>완료일</span>
-                    <input type="text" class="form-control" autocomplete="off" value="2020-08-31" disabled>
-                </div>
-                <div class="form-group">
-                    <span>지원 내용</span>
-                    <button type="button" class="btn btn-outline-primary" id="support-add-btn">추가</button>
-                    <textarea class="form-control col-sm-12" id="supports" rows="5" disabled>
+                <div class="right-div">
+                    <div class="form-group">
+                        <span>지원 내용</span>
+                        <span class="badge badge-primary" id="support-add-btn">추가</span>
+                        <textarea class="form-control col-sm-12" id="supports" rows="5" disabled>
 - 2020.08.24 준비
 - 2020.07.25 사전 미팅
-                    </textarea>
-                </div>
-                <div class="form-group">
-                    <span>내용 및 특이사항</span>
-                    <button type="button" class="btn btn-outline-primary" id="comments-change-btn">변경</button>
-                    <textarea class="form-control col-sm-12" id="comments" rows="5" disabled>
+                        </textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <div class=""></div>
+                        <span>내용 및 특이사항</span>
+                        <span class="badge badge-primary" id="comments-change-btn">변경</span>
+                        <textarea class="form-control col-sm-12" id="comments" rows="5" disabled>
 - 장소: LG화학 본사 1층
 - NAC 5.0 제품 설명 완료
-                    </textarea>
+                        </textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <span>첨부 파일</span>
+                        <span class="badge badge-primary">추가</span>
+                        <ul class="list-group">
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                [LG화학/POC] 제품소개서.ppt
+
+                                <i class="fa fa-download"></i>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                [LG화학/POC] 네트워크 환경 및 구성도.ppt
+                                <i class="fa fa-download"></i>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <span>첨부 파일</span>
-                    <button type="button" class="btn btn-outline-primary">업로드</button>
-                    <ul class="list-group">
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            [LG화학/POC] 제품소개서.ppt
-                            <span class="badge badge-primary badge-pill">다운로드</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            [LG화학/POC] 네트워크 환경 및 구성도.ppt
-                            <span class="badge badge-primary badge-pill">다운로드</span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="text-right submit-box">
-                    <button type="button" class="btn btn-outline-danger">
-                        취소
-                    </button>
-                    <button type="submit" class="btn btn-outline-primary" id="submit-btn">
-                        수정
-                    </button>
-                </div>
+            </div>
+            <div class="text-right submit-box">
+                <button type="button" class="btn btn-outline-danger">
+                    취소
+                </button>
+                <button type="submit" class="btn btn-outline-primary" id="submit-btn">
+                    수정
+                </button>
             </div>
         </div>
     </div>
@@ -75,6 +86,7 @@
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
+<link rel="stylesheet" href="{% static 'css/report/reportProjectEdit.css' %}">
 {% endblock %}
 
 {% block js %}
