--- a/static/css/login.css
+++ b/static/css/login.css
@@ -40,10 +40,10 @@ html {
 
 .login__form .login__top {
   width: 100%;
-  height: 59%;
+  height: 400px;
   overflow: hidden;
   background: url("/static/img/login.jpg") no-repeat;
-  background-size: 100%;
+  background-size: cover;
 }
 
 .login__top img {
@@ -52,7 +52,7 @@ html {
 
 .login__form .login__bottom {
   width: 100%;
-  height: 41%;
+  height: 400px;
   overflow: hidden;
   background-color: #9c88ff;
   color: #2c3e50;
@@ -97,14 +97,19 @@ html {
   margin-top: 25px;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 487px) {
+  .login__form .login__top {
+    overflow: hidden;
+    background-size: 100% 112%;
+  }
+
   .container.login-size {
     width: 100%;
-    height: 100%;
+    height: 700px;
   }
 }
 
-@media (min-width: 500px) {
+@media (min-width: 480px) {
   .container.login-size {
     width: 480px;
     height: 700px;
