[ADD] equipment status apply modal css

--- a/equipment/templates/equipment/equipment_client_detail.html
+++ b/equipment/templates/equipment/equipment_client_detail.html
@@ -153,6 +153,7 @@
 {% endblock %} {% block title %} {{client}} 납품 현황 {% endblock %}
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
+<link rel="stylesheet" href="{% static 'css/equipment/equipmentStatusApply.css' %}">
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
 {% endblock %}
 
