[MODIFY] login text

--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -22,12 +22,12 @@
         <div class="login__contents">
           {% if message == '' %}
           <div class="login__header">
-            <h1>USER LOGIN</h1>
+            <h1>LOGIN</h1>
             <span>Welcome back</span>
           </div>
           {% else %}
           <div class="login__header">
-            <h1>USER LOGIN</h1>
+            <h1>LOGIN</h1>
             <span style="color:red; font-weight: bold;">{{ message }}</span>
           </div>
           {% endif %}
