--- a/templates/base.html
+++ b/templates/base.html
@@ -52,11 +52,11 @@
             문서관리
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="{% url 'sites_main' %}">문서 현황</a>
-            <!-- <a class="dropdown-item" href="{% url 'sites_main_test' %}">문서 현황(테스트)</a> -->
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{% url 'sites_add' %}">고객사 등록</a>
+            <a class="dropdown-item" href="{% url 'document_main' %}">문서 현황</a>
             <a class="dropdown-item" href="{% url 'document_upload' %}">문서 등록</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">양식 현황</a>
+            <a class="dropdown-item" href="{% url 'document_main' %}">양식 등록</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -69,8 +69,6 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'equipment_form' %}">납품 등록</a>
             <a class="dropdown-item" href="{% url 'equipment_upload' %}">납품 등록(대량)</a>
-            <!-- <div class="dropdown-divider"></div> -->
-            <!-- <a class="dropdown-item" href="{% url 'equipment_test' %}">납품 테스트 페이지</a> -->
           </div>
         </li>
 
@@ -80,7 +78,8 @@
             재고 관리
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="{% url 'equipment_stock' %}">재고 현황</a>
+            <a class="dropdown-item" href="{% url 'equipment_stock' %}">재고 현황(원본)</a>
+            <a class="dropdown-item" href="{% url 'equipment_stock_test' %}">재고 현황(테스트)</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'equipment_stock_form' %}">재고 등록</a>
             <a class="dropdown-item" href="{% url 'equipment_stock_upload' %}">재고 등록(대량)</a>
