--- a/templates/base.html
+++ b/templates/base.html
@@ -55,8 +55,7 @@
             <a class="dropdown-item" href="{% url 'document_main' %}">문서 현황</a>
             <a class="dropdown-item" href="{% url 'document_upload' %}">문서 등록</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">양식 현황</a>
-            <a class="dropdown-item" href="{% url 'document_main' %}">양식 등록</a>
+            <a class="dropdown-item" href="{% url 'document_form' %}">양식 현황</a>
           </div>
         </li>
         <li class="nav-item dropdown">
