--- a/static/css/document/upload.css
+++ b/static/css/document/upload.css
@@ -16,11 +16,12 @@
 }
 
 .card-body .upload-contents {
-  display: flex;
 }
 
 .upload-contents .left-contents {
-  width: 45%;
+  display: flex;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
 }
 
 .left-contents .form-group {
@@ -28,7 +29,7 @@
 }
 
 .upload-contents .right-contents {
-  width: 55%;
+  width: 50%;
 }
 
 @media (min-width: 320px) and (max-width: 500px) {
