--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="body">
-  <form class="login__content container login-size" action="/login/check/" method="post">
+  <form class="login__content container login-size">
     {% csrf_token %}
     <div class="login__form">
       <div class="login__top">
@@ -36,13 +36,13 @@
               <div class="login__icon">
                 <i class="fa fa-user"></i>
               </div>
-              <input type="text" name="member_id" placeholder="아이디입력" autofocus required />
+              <input type="text" id="memberId" name="member_id" placeholder="아이디입력" autofocus required />
             </div>
             <div class="login__pw">
               <i class="fa fa-lock"></i>
-              <input type="password" name="member_pw" placeholder="패스워드입력" required />
+              <input type="password" id="memberPw" name="member_pw" placeholder="패스워드입력" required />
             </div>
-            <button type="submit" class="btn btn-primary" id="login_btn">Login</button>
+            <button type="submit" class="btn btn-primary" id="login_btn" onclick="authCheck(event)">Login</button>
           </div>
         </div>
       </div>
@@ -53,6 +53,7 @@
     crossorigin="anonymous"></script>
   <script trype="text/javascript" src="{% static 'js/bootstrap/jquery-3.4.1.min.js' %}"></script>
   <script trype="text/javascript" src="{% static 'js/bootstrap/bootstrap.js' %}"></script>
+  <script trype="text/javascript" src="{% static 'js/login/login.js' %}"></script>
 </body>
 
 </html>
